// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom cart empty button 1`] = `
Array [
  .c0 {
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.01875rem;
  -moz-letter-spacing: 0.01875rem;
  -ms-letter-spacing: 0.01875rem;
  letter-spacing: 0.01875rem;
  margin-bottom: 3.375rem;
}

<div
    className="c0"
  >
    Custom message text
  </div>,
  .c3 {
  width: 1.125em;
  height: 1.125em;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1999dd;
  border-color: #1999dd;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  min-width: 100px;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  position: relative;
  text-align: center;
}

.c1:hover {
  background-color: #25b0f9;
  border-color: #25b0f9;
  color: #ffffff;
}

.c1:active {
  background-color: #057dbe;
  border-color: #057dbe;
  color: #ffffff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  padding-left: 20px;
  -webkit-transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
  transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
}

.c2 svg path,
.c2 svg rect {
  fill: #ffffff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
      title={undefined}
    >
      <div>
        Custom button text
      </div>
      <div
        className="c2"
        style={
          Object {
            "opacity": 0,
            "paddingLeft": 0,
            "width": 0,
          }
        }
      >
        <svg
          className="c3"
          height="40px"
          style={
            Object {
              "enableBackground": "new 0 0 50 50",
            }
          }
          version="1.1"
          viewBox="0 0 50 50"
          width="40px"
          x="0px"
          y="0px"
        >
          <path
            d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
            fill="#000"
          >
            <animateTransform
              attributeName="transform"
              attributeType="xml"
              dur="1s"
              from="0 25 25"
              repeatCount="indefinite"
              to="360 25 25"
              type="rotate"
            />
          </path>
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`default cart empty button 1`] = `
Array [
  .c0 {
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.01875rem;
  -moz-letter-spacing: 0.01875rem;
  -ms-letter-spacing: 0.01875rem;
  letter-spacing: 0.01875rem;
  margin-bottom: 3.375rem;
}

<div
    className="c0"
  >
    Your shopping cart is empty.
  </div>,
  .c3 {
  width: 1.125em;
  height: 1.125em;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1999dd;
  border-color: #1999dd;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  min-width: 100px;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  position: relative;
  text-align: center;
}

.c1:hover {
  background-color: #25b0f9;
  border-color: #25b0f9;
  color: #ffffff;
}

.c1:active {
  background-color: #057dbe;
  border-color: #057dbe;
  color: #ffffff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  padding-left: 20px;
  -webkit-transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
  transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
}

.c2 svg path,
.c2 svg rect {
  fill: #ffffff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
      title={undefined}
    >
      <div>
        Continue shopping
      </div>
      <div
        className="c2"
        style={
          Object {
            "opacity": 0,
            "paddingLeft": 0,
            "width": 0,
          }
        }
      >
        <svg
          className="c3"
          height="40px"
          style={
            Object {
              "enableBackground": "new 0 0 50 50",
            }
          }
          version="1.1"
          viewBox="0 0 50 50"
          width="40px"
          x="0px"
          y="0px"
        >
          <path
            d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
            fill="#000"
          >
            <animateTransform
              attributeName="transform"
              attributeType="xml"
              dur="1s"
              from="0 25 25"
              repeatCount="indefinite"
              to="360 25 25"
              type="rotate"
            />
          </path>
        </svg>
      </div>
    </div>
  </div>,
]
`;
